--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Array.</title>
-    <link rel="stylesheet" href="./css/app.css">
+    <link rel="stylesheet" href="./public/css/app.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +51,7 @@
         </div>
 
         <div class="f-register-section">
-            <img src="./images/register-image.png" alt="devices">
+            <img src="./public/images/register-image.png" alt="devices">
 
             <div class="f-register-middle">
                 <h1 class="f-register-h1">Multi purpose business landing page</h1>
@@ -64,11 +64,11 @@
         </div>
 
         <div class="f-partners-section">
-            <img src="./images/cc-icon.png" alt="creative-commons-icon">
-            <img src="./images/magento-icon.png" alt="magento-icon">
-            <img src="./images/woo-icon.png" alt="woo-commerce-icon">
-            <img src="./images/ubuntu-icon.png" alt="ubuntu-icon">
-            <img src="./images/linux-icon.png" alt="linux-icon">
+            <img src="./public/images/cc-icon.png" alt="creative-commons-icon">
+            <img src="./public/images/magento-icon.png" alt="magento-icon">
+            <img src="./public/images/woo-icon.png" alt="woo-commerce-icon">
+            <img src="./public/images/ubuntu-icon.png" alt="ubuntu-icon">
+            <img src="./public/images/linux-icon.png" alt="linux-icon">
         </div>
 
     </section>
@@ -142,7 +142,7 @@
         <div class="f-main-content">
             <div class="f-top-content">
                 <div class="f-pic">
-                    <img src="./images/statistics.png" alt="statistics">
+                    <img src="./public/images/statistics.png" alt="statistics">
                 </div>
 
                 <div class="f-text">
@@ -164,7 +164,7 @@
                 </div>
 
                 <div class="f-pic">
-                    <img src="./images/statistics.png" alt="statistics">
+                    <img src="./public/images/statistics.png" alt="statistics">
                 </div>
             </div>
         </div>
@@ -200,7 +200,7 @@
         <div class="f-features">
             <div class="f-first-feature">
                 <div class="f-top-title">
-                    <img src="./images/client-support-icon.png" alt="Client-Support">
+                    <img src="./public/images/client-support-icon.png" alt="Client-Support">
 
                 <h3>Client Support</h3>
             </div>
@@ -210,7 +210,7 @@
 
             <div class="f-second-feature">
                 <div class="f-top-title">
-                    <img src="./images/secure-servers-icon.png" alt="Secure-Servers">
+                    <img src="./public/images/secure-servers-icon.png" alt="Secure-Servers">
 
                 <h3>Secure Servers</h3>
             </div>
@@ -220,7 +220,7 @@
 
             <div class="f-third-feature">
                 <div class="f-top-title">
-                    <img src="./images/product-feedback-icon.png" alt="Product-Feedback">
+                    <img src="./public/images/product-feedback-icon.png" alt="Product-Feedback">
 
                 <h3>Product Feedback</h3>
             </div>
@@ -229,7 +229,7 @@
             </div>
         </div>
 
-        <img src="./images/stats.png" alt="stats">
+        <img src="./public/images/stats.png" alt="stats">
     </section>
 
     <!-- section 6 from yahya -->
